# c2switcher-windows

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  build.ps1  build.spec  c2claude.ps1  icon_spec.md  pyproject.toml
.claude/commands/: add-account.md  check-sessions.md  debug-auth.md  diagnose.md  rebuild.md  setup-statusline.md
c2switcher/: __main__.py  constants.py  utils.py
c2switcher/core/: models.py
c2switcher/data/: credential_store.py  store.py
c2switcher/infrastructure/: auth_log.py  crypto.py  oauth.py
c2switcher/presentation/: console.py
c2switcher/presentation/cli/: accounts.py  apikey.py  login.py  reports.py  switching.py  usage_cmd.py
c2switcher/presentation/tray/: app.py  icons.py  monitor.py  popup.py  startup.py  themes.py  widgets.py
c2switcher/reports/: sessions.py  usage.py
c2switcher/services/: accounts.py  switching.py
temp/c2switcher-mint/applet/: ICON_SPEC.md  metadata.json  stylesheet.css
temp/c2switcher-mint/c2switcher/: __init__.py  __main__.py  cli.py  constants.py
temp/c2switcher-mint/c2switcher/core/: errors.py
temp/c2switcher-mint/c2switcher/data/: credential_store.py
temp/c2switcher-mint/c2switcher/infrastructure/: factory.py  locking.py
temp/c2switcher-mint/c2switcher/presentation/: renderers.py
temp/c2switcher-mint/c2switcher/reports/: __init__.py
temp/c2switcher-mint/c2switcher/services/: reporting.py  sessions.py
temp/c2switcher-mint/oauth-re/: README.md  auth-flow.js  callback-server.js  config.js  pkce.js  token-exchange.js
temp/c2switcher-mint/plasmoid/: metadata.json
(+12 files in other folders)
